--- a/progettoTe/WebContent/style.css
+++ b/progettoTe/WebContent/style.css
@@ -1,7 +1,7 @@
 @CHARSET "ISO-8859-1";
 body {
 	font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
-	background-color: #42413C;
+	background-color:#e5ffff;
 	margin: 0;
 	padding: 0;
 	color: #000;
