--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -21,10 +21,13 @@ a img { /*  Questo selettore rimuove il bordo blu predefinito visualizzato in al
 }
 /* ~~ L'applicazione di stili ai collegamenti del sito deve rispettare questo ordine, compreso il gruppo di selettori che creano l'effetto hover. ~~ */
 a:link {
-	color: #ffffff;
+	color: #000;
 	text-decoration: underline; /*  A meno che non vogliate personalizzare
 	 i collegamenti in un modo molto particolare, è bene applicare la sottolineatura 
 	 per permetterne una rapida identificazione visiva.  */
+}
+#searchresult a:link{
+	color: blue;
 }
  
 a:hover,   { /*  Questo gruppo di selettori conferisce alla navigazione tramite tastiera gli stessi effetti hover che si producono quando si usa il mouse.  */
